# profile-correspondence-encoder

./: .gitignore  README.md  pyproject.toml
src/profile_correspondence_encoder/: __init__.py  encoder.py
tests/: test_encoder.py  test_multiclass_vs_ohe.py  test_performance_features.py  test_vs_ohe.py
